# ghostricon

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: bridge.py  config.py  daemon.py  gui.py  main.py  privileged.py  privileged_async.py  utils.py  vpn.py
src/ghostricon/: api.py  bridge.py  commands.py  config.py  constants.py  daemon.py  gui.py  main.py  privileged.py  privileged_async.py  vpn.py
src/ghostricon/gui/: __init__.py  configuration.py  indicator.py  notification.py  settings.py
src/ghostricon/ipc/: client.py  server.py
src/ipc/: client.py  server.py  utils.py
